--- a/vc-web/vc-web-front/src/main/resources/public/admin/machine/index_list2.html
+++ b/vc-web/vc-web-front/src/main/resources/public/admin/machine/index_list2.html
@@ -37,20 +37,19 @@
 				        <li><label><input value="csmTeNo" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >序列号</label></li>
 				        <li><label><input value="csmTeTypeText" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >终端类型</label></li>
 				        <li><label><input value="csmTeModel" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >终端型号</label></li>
-				        <li><label><input value="csmTeCode" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >厂商代码</label></li>
-				        <li><label><input value="csmTeLotNo" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >终端批号</label></li>
-				        <li><label><input value="csmTeSerial" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >终端流水</label></li>
-				        <li><label><input value="csmMobile" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >可充电储能系统编码</label></li>
+				        <li><label><input value="csmTeCode"  type="checkbox" onclick='showHideColumn(this, this.value);' >厂商代码</label></li>
+				        <li><label><input value="csmTeLotNo"  type="checkbox" onclick='showHideColumn(this, this.value);' >终端批号</label></li>
+				        <li><label><input value="csmTeSerial"  type="checkbox" onclick='showHideColumn(this, this.value);' >终端流水</label></li>
+				        <li><label><input value="csmMobile" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >SIM卡</label></li>
 				        <li><label><input value="csmIccid" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >ICCID</label></li>
-				        <li><label><input value="csmPassword" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >服务密码</label></li>
+				        <li><label><input value="csmPassword"  type="checkbox" onclick='showHideColumn(this, this.value);' >服务密码</label></li>
 				        <li><label><input value="csmProtocolText" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >协议类型</label></li>
-				        <li><label><input value="csmFunctions" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >功能标签</label></li>
+				        <li><label><input value="csmFunctions"  type="checkbox" onclick='showHideColumn(this, this.value);' >功能标签</label></li>
 				        <li><label><input value="csmBluetoothVersion" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >蓝牙版本</label></li>
 				        <li><label><input value="csmBluetoothMac" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >蓝牙地址</label></li>
 				        <li><label><input value="csmBluetoothPsd" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >蓝牙密码</label></li>
-				        <li><label><input value="csmMqttFlag" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >服务器标识</label></li>
-				        <li><label><input value="csmSuperSim" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >超级手机号</label></li>
-				        <li><label><input value="csmLandmark" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >地标类型</label></li>
+				        <li><label><input value="csmMqttFlag"  type="checkbox" onclick='showHideColumn(this, this.value);' >服务器标识</label></li>
+				        <li><label><input value="csmSuperSim"  type="checkbox" onclick='showHideColumn(this, this.value);' >超级手机号</label></li>
 				        <li><label><input value="csmV2" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >硬件版本</label></li>
 				        <li><label><input value="csmV3" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >DVD当前版本</label></li>
 				        <li><label><input value="csmV3To" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >DVD最新版本</label></li>
@@ -58,11 +57,11 @@
 				        <li><label><input value="csmTlV1" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >软件版本</label></li>
 				        <li><label><input value="csmTlV2" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >分时租赁版本</label></li>
 				        <li><label><input value="csmNetType" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >网络类型</label></li>
-				        <li><label><input value="csmProType" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >终端协议</label></li>
+				        <li><label><input value="csmProTypeText" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >终端协议</label></li>
 				        <li><label><input value="csmBaudRate" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >CAN1波特率</label></li>
-				        <li><label><input value="csmRemark" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >备注信息</label></li>
-				        <li><label><input value="csmUpdateTime" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >备注信息</label></li>
-				        <li><label><input value="csmAddTime" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >备注信息</label></li>
+				        <li><label><input value="csmRemark"  type="checkbox" onclick='showHideColumn(this, this.value);' >备注信息</label></li>
+				        <li><label><input value="csmUpdateTime" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >修改时间</label></li>
+				        <li><label><input value="csmAddTime" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >添加时间</label></li>
 				        <li><label><input value="csmStatusText" checked="checked" type="checkbox" onclick='showHideColumn(this, this.value);' >状态</label></li>
 					</ul>
 				</div>
@@ -187,20 +186,12 @@
 	  		,{field: "csmTeNo", title: "序列号", width: 110, sort:true}
 	  		,{field: "csmTeTypeText", title: "终端类型", width: 110, sort:true}
 	  		,{field: "csmTeModel", title: "终端型号", width: 110, sort:true}
-	  		,{field: "csmTeCode", title: "厂商代码", width: 110, sort:true}
-	  		,{field: "csmTeLotNo", title: "终端批号", width: 110, sort:true}
-	  		,{field: "csmTeSerial", title: "终端流水", width: 110, sort:true}
-	  		,{field: "csmMobile", title: "可充电储能系统编码", width: 110, sort:true}
+	  		,{field: "csmMobile", title: "SIM卡", width: 110, sort:true}
 	  		,{field: "csmIccid", title: "ICCID", width: 110, sort:true}
-	  		,{field: "csmPassword", title: "服务密码", width: 110, sort:true}
 	  		,{field: "csmProtocolText", title: "协议类型", width: 110, sort:true}
-	  		,{field: "csmFunctions", title: "功能标签", width: 110, sort:true}
 	  		,{field: "csmBluetoothVersion", title: "蓝牙版本", width: 110, sort:true}
 	  		,{field: "csmBluetoothMac", title: "蓝牙地址", width: 110, sort:true}
 	  		,{field: "csmBluetoothPsd", title: "蓝牙密码", width: 110, sort:true}
-	  		,{field: "csmMqttFlag", title: "服务器标识", width: 110, sort:true}
-	  		,{field: "csmSuperSim", title: "超级手机号", width: 110, sort:true}
-	  		,{field: "csmLandmark", title: "地标类型", width: 110, sort:true}
 	  		,{field: "csmV2", title: "硬件版本", width: 110, sort:true}
 	  		,{field: "csmV3", title: "DVD当前版本", width: 110, sort:true}
 	  		,{field: "csmV3To", title: "DVD最新版本", width: 110, sort:true}
@@ -208,11 +199,10 @@
 	  		,{field: "csmTlV1", title: "软件版本", width: 110, sort:true}
 	  		,{field: "csmTlV2", title: "分时租赁版本", width: 110, sort:true}
 	  		,{field: "csmNetType", title: "网络类型", width: 110, sort:true}
-	  		,{field: "csmProType", title: "终端协议", width: 110, sort:true}
+	  		,{field: "csmProTypeText", title: "终端协议", width: 110, sort:true}
 	  		,{field: "csmBaudRate", title: "CAN1波特率", width: 110, sort:true}
-	  		,{field: "csmRemark", title: "备注信息", width: 110, sort:true}
-	  		,{field: "csmUpdateTime", title: "备注信息", width: 110, sort:true}
-	  		,{field: "csmAddTime", title: "备注信息", width: 110, sort:true}
+	  		,{field: "csmUpdateTime", title: "修改时间", width: 110, sort:true}
+	  		,{field: "csmAddTime", title: "添加时间", width: 110, sort:true}
 	  		,{field: "csmStatusText", title: "状态", width: 110, sort:true}
       		,{field: 'operate', title: '操作', width: 120, fixed:'right', toolbar: '#gridToolBar'}
     ];
