--- a/vc-web/vc-web-front/src/main/resources/public/admin/machine/index_query.html
+++ b/vc-web/vc-web-front/src/main/resources/public/admin/machine/index_query.html
@@ -67,7 +67,7 @@
 				</dd>
 			</dl>
 <dl cond="csmMobile" >
-				<dt>可充电储能系统编码</dt>
+				<dt>SIM卡</dt>
 				<dd  >
 					<input  name="csmMobileLike" placeholder="" class="form-control" >
 				</dd>
@@ -126,12 +126,6 @@
 					<input  name="csmSuperSimEquals" placeholder="" class="form-control" >
 				</dd>
 			</dl>
-<dl cond="csmLandmark" style="display:none;">
-				<dt>地标类型</dt>
-				<dd  >
-					<input  name="csmLandmarkEquals" placeholder="" class="form-control" >
-				</dd>
-			</dl>
 <dl cond="csmV2" style="display:none;">
 				<dt>硬件版本</dt>
 				<dd  >
@@ -177,7 +171,11 @@
 <dl cond="csmProType" style="display:none;">
 				<dt>终端协议</dt>
 				<dd  >
-					<input  name="csmProTypeEquals" placeholder="请输入数字" class="form-control" >
+					<select class="form-control"  name="csmProTypeEquals"  >
+	                    <option></option>
+                         <option value="1">mqtt</option>
+                         <option value="2">808</option>
+                    </select>
 				</dd>
 			</dl>
 <dl cond="csmBaudRate" style="display:none;">
@@ -193,13 +191,13 @@
 				</dd>
 			</dl>
 <dl cond="csmUpdateTime" style="display:none;">
-				<dt>备注信息</dt>
+				<dt>修改时间</dt>
 				<dd  >
 					<input  name="csmUpdateTimeEquals" class="form-control layer-date laydate-icon" placeholder="" onclick="laydate({istime:true, format: 'YYYY-MM-DD hh:mm:ss'})">
 				</dd>
 			</dl>
 <dl cond="csmAddTime" style="display:none;">
-				<dt>备注信息</dt>
+				<dt>添加时间</dt>
 				<dd  >
 					<input  name="csmAddTimeEquals" class="form-control layer-date laydate-icon" placeholder="" onclick="laydate({istime:true, format: 'YYYY-MM-DD hh:mm:ss'})">
 				</dd>
@@ -229,7 +227,7 @@
 			        <li><label><input cond="csmTeCode" value="csmTeCode"  type="checkbox" onclick='showHideCondition(this, this.value);' >厂商代码</label></li>
 			        <li><label><input cond="csmTeLotNo" value="csmTeLotNo"  type="checkbox" onclick='showHideCondition(this, this.value);' >终端批号</label></li>
 			        <li><label><input cond="csmTeSerial" value="csmTeSerial"  type="checkbox" onclick='showHideCondition(this, this.value);' >终端流水</label></li>
-			        <li><label><input cond="csmMobile" value="csmMobile" checked="checked" type="checkbox" onclick='showHideCondition(this, this.value);' >可充电储能系统编码</label></li>
+			        <li><label><input cond="csmMobile" value="csmMobile" checked="checked" type="checkbox" onclick='showHideCondition(this, this.value);' >SIM卡</label></li>
 			        <li><label><input cond="csmIccid" value="csmIccid"  type="checkbox" onclick='showHideCondition(this, this.value);' >ICCID</label></li>
 			        <li><label><input cond="csmPassword" value="csmPassword"  type="checkbox" onclick='showHideCondition(this, this.value);' >服务密码</label></li>
 			        <li><label><input cond="csmProtocol" value="csmProtocolText"  type="checkbox" onclick='showHideCondition(this, this.value);' >协议类型</label></li>
@@ -239,7 +237,6 @@
 			        <li><label><input cond="csmBluetoothPsd" value="csmBluetoothPsd"  type="checkbox" onclick='showHideCondition(this, this.value);' >蓝牙密码</label></li>
 			        <li><label><input cond="csmMqttFlag" value="csmMqttFlag"  type="checkbox" onclick='showHideCondition(this, this.value);' >服务器标识</label></li>
 			        <li><label><input cond="csmSuperSim" value="csmSuperSim"  type="checkbox" onclick='showHideCondition(this, this.value);' >超级手机号</label></li>
-			        <li><label><input cond="csmLandmark" value="csmLandmark"  type="checkbox" onclick='showHideCondition(this, this.value);' >地标类型</label></li>
 			        <li><label><input cond="csmV2" value="csmV2"  type="checkbox" onclick='showHideCondition(this, this.value);' >硬件版本</label></li>
 			        <li><label><input cond="csmV3" value="csmV3"  type="checkbox" onclick='showHideCondition(this, this.value);' >DVD当前版本</label></li>
 			        <li><label><input cond="csmV3To" value="csmV3To"  type="checkbox" onclick='showHideCondition(this, this.value);' >DVD最新版本</label></li>
@@ -247,11 +244,11 @@
 			        <li><label><input cond="csmTlV1" value="csmTlV1"  type="checkbox" onclick='showHideCondition(this, this.value);' >软件版本</label></li>
 			        <li><label><input cond="csmTlV2" value="csmTlV2"  type="checkbox" onclick='showHideCondition(this, this.value);' >分时租赁版本</label></li>
 			        <li><label><input cond="csmNetType" value="csmNetType"  type="checkbox" onclick='showHideCondition(this, this.value);' >网络类型</label></li>
-			        <li><label><input cond="csmProType" value="csmProType"  type="checkbox" onclick='showHideCondition(this, this.value);' >终端协议</label></li>
+			        <li><label><input cond="csmProType" value="csmProTypeText"  type="checkbox" onclick='showHideCondition(this, this.value);' >终端协议</label></li>
 			        <li><label><input cond="csmBaudRate" value="csmBaudRate"  type="checkbox" onclick='showHideCondition(this, this.value);' >CAN1波特率</label></li>
 			        <li><label><input cond="csmRemark" value="csmRemark"  type="checkbox" onclick='showHideCondition(this, this.value);' >备注信息</label></li>
-			        <li><label><input cond="csmUpdateTime" value="csmUpdateTime"  type="checkbox" onclick='showHideCondition(this, this.value);' >备注信息</label></li>
-			        <li><label><input cond="csmAddTime" value="csmAddTime"  type="checkbox" onclick='showHideCondition(this, this.value);' >备注信息</label></li>
+			        <li><label><input cond="csmUpdateTime" value="csmUpdateTime"  type="checkbox" onclick='showHideCondition(this, this.value);' >修改时间</label></li>
+			        <li><label><input cond="csmAddTime" value="csmAddTime"  type="checkbox" onclick='showHideCondition(this, this.value);' >添加时间</label></li>
 			        <li><label><input cond="csmStatus" value="csmStatusText"  type="checkbox" onclick='showHideCondition(this, this.value);' >状态</label></li>
 					</ul>
 				</div>
