--- a/vc-web/vc-web-front/src/main/resources/static/index.html
+++ b/vc-web/vc-web-front/src/main/resources/static/index.html
@@ -85,6 +85,19 @@
 								</li>
 							</ul>
 						</li>
+
+						<li>
+							<a href="#">
+								<i class="fa fa-home"></i>
+								<span class="nav-label">监控管理</span>
+								<span class="fa arrow"></span>
+							</a>
+							<ul class="nav nav-second-level">
+								<li>
+									<a class="J_menuItem" href="monitor/state/index.html">车辆实时信息</a>
+								</li>
+							</ul>
+						</li>
 					</ul>
 				</div>
 			</nav>
